spade-tests/src/snapshots/spade_tests__typeinference__nested_type_error.snap
---
source: spade-tests/src/typeinference.rs
---
entity counter(clk: clock) -> int<8> {
    decl x;
    let x = x + 1;
    x
}


error: Expected type Number<8>, got Number<9>
  ┌─ testinput:3:13
  │  
1 │   entity counter(clk: clock) -> int<8> {
  │ ╭──────────────────────────────────────'
2 │ │     decl x;
3 │ │     let x = x + 1;
  │ │             ^^^^^ Expected Number<8>, got Number<9>
4 │ │     x
5 │ │ }
  │ ╰─' The error occurred when unifying types here
  │  
  = note: Expected: 8
                in: Number<8>
               Got: 9
                in: Number<9>
  = note: Addition creates one more output bit than the input to avoid overflow
